fix: hidden scrollbar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,6 +57,10 @@ body {
 
 body {
     font-family: 'Montserrat', sans-serif;
+
+    &::-webkit-scrollbar{
+      width: 0px
+    }
 }
 
 a {
